[project]
name = "first"
version = "0.1.0"
description = "WeChat mini program security debugging tool based on Frida and CDP proxy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frida>=17.0.0",
    "websockets>=12.0",
    "protobuf>=4.0.0",
    "pyside6>=6.5.0",
    "pycryptodome",
]

[tool.uv]
package = false
